--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ local = [
     # "mostlyai-engine @ git+https://github.com/mostly-ai/mostlyai-engine.git@main",  # for development
     # "mostlyai-qa @ git+https://github.com/mostly-ai/mostlyai-qa.git@main",  # for development
     # "mostlyai-engine[gpu]==1.4.8",  # for release
-    "mostlyai-engine=={ path = "../mostlyai-engine-bp" }",  # forkリポジトリ
+    "mostlyai-engine @ git+https://github.com/dcm-kouki-eguchi/mostlyai-engine-bp.git@main",  # forkリポジトリ
     "mostlyai-qa==1.9.8",  # for release
     "fastapi>=0.115.6,<0.116",
     "uvicorn>=0.34.0,<0.35",
@@ -76,7 +76,7 @@ local = [
 local-gpu = [
     # "mostlyai-engine[gpu] @ git+https://github.com/mostly-ai/mostlyai-engine.git@main",  # for development
     # "mostlyai-qa @ git+https://github.com/mostly-ai/mostlyai-qa.git@main",  # for development
-    #"mostlyai-engine[gpu]==1.4.8",  # for release
+    #"mostlyai-engine[gpu]  @ git+https://github.com/dcm-kouki-eguchi/mostlyai-engine-bp.git@main",  # for release
     "mostlyai-engine = { path = \"../mostlyai-engine-bp\", extras = [\"gpu\"] }" # forkリポジトリ
     "mostlyai-qa==1.9.8",  # for release
     "fastapi>=0.115.6,<0.116",
